--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="top" class="w-full flex flex-col z-50 fixed sm:relative bg-white">
         <div class="">
           <nav id="site-menu"
-            class="px-5 flex sm:flex-row lg:max-w-screen-xl lg:justify-between mt-4 py-3 bg-white mx-auto shadow sm:shadow-md border-t-4 border-purple-900">
+            class="px-5 flex sm:flex-row  md:max-w-full lg:max-w-screen-xl justify-between  mt-4 py-3 bg-white mx-auto shadow sm:shadow-md border-t-4 border-purple-900">
             <div
               class="w-full sm:w-auto sm:self-center flex flex-row sm:flex-none flex-no-wrap justify-between items-center">
               <a href="#" class="no-underline py-1">
@@ -34,7 +34,7 @@
             </div>
             <!--nav link-->
             <div id="menu"
-              class="w-full sm:w-auto sm:self-center sm:flex flex-col space-x-6 sm:flex-row items-center h-full py-1 pb-4 sm:py-0 sm:pb-0 hidden">
+              class="w-full sm:w-auto sm:self-end sm:flex flex-col space-x-6 sm:flex-row items-center h-full py-1 pb-4 sm:py-0 sm:pb-0 hidden">
               <a class="text-gray-400 font-bold hover:text-gray-500 text-md no-underline sm:w-auto sm:pr-4 py-2 sm:py-1 sm:pt-2"
                 href="" target="">Home</a>
               <a class="text-gray-400 font-bold hover:text-gray-500 text-md no-underline sm:w-auto sm:px-4 py-2 sm:py-1 sm:pt-2"
@@ -456,8 +456,8 @@
   </section>
   <!--recent course-->
   <section>
-    <div class="container bg-white bg-cover min-h-screen min-w-ful mx-auto py-24">
-      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+    <div class="container bg-white bg-cover min-h-screen min-w-ful mx-auto ">
+      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-10">
         <div class=" flex flex-row space-x-28">
           <div class="mx-5">
             <h3 class="capitalize text-xl lg:text-2xl font-bold">
@@ -908,7 +908,7 @@
   <!--testimony section -->
   <section>
     <div class="container bg-white bg-cover min-h-full min-w-ful mx-auto">
-      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+      <div class="px-4 py-8 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-10">
         <div class="flex lg:gap-10 gap-2 lg:justify-between justify-center items-center lg:ml-4 ">
           <h1 class="text-3xl font-medium  text-gray-900 ">
             What our<br class="block lg:hidden" />
@@ -919,8 +919,8 @@
             Veiw More
           </button>
         </div>
-        <div class="flex lg:flex-row flex-col items-center lg:space-x-6 ">
-          <div class="p-4 md:w-3/5 max-w-md">
+        <div class="grid gap-5 mx-auto sm:grid-cols-2 lg:grid-cols-3 lg:-w-screen-lg ">
+          <div class="p-4  max-w-md">
             <div class="bg-gray-100 p-8 rounded">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4"
                 viewBox="0 0 975.036 975.036">
@@ -944,7 +944,7 @@
               </div>
             </div>
           </div>
-          <div class="p-4 md:w-3/5 max-w-md">
+          <div class="p-4  max-w-md">
             <div class="bg-gray-100 p-8 rounded">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4"
                 viewBox="0 0 975.036 975.036">
@@ -969,7 +969,7 @@
             </div>
           </div>
 
-          <div class="p-4 md:w-3/5 max-w-md">
+          <div class="p-4  max-w-md">
             <div class="h-full bg-gray-100 p-8 rounded">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4"
                 viewBox="0 0 975.036 975.036">
@@ -1001,8 +1001,8 @@
   <!--subscrible scetion-->
   <section>
     <div class="bg-slate-50 bg-cover min-h-full min-w-full mx-auto mt-16">
-      <div class="lg:max-w-screen-full lg:mx-40">
-        <div class="relative bg-purple-800/50 lg:max-w-screen-xl lg:mx-32 mx-5 mt-10">
+      <div class=" md:max-w-screen-xl  md:mx-40">
+        <div class="relative bg-purple-800/50    md:max-w-screen-xl md:mx-32 mx-5 mt-10">
           <div class="absolute inset-x-0 bottom-0">
             <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-slate-50" preserveAspectRatio="none">
               <path
@@ -1037,8 +1037,8 @@
 
   <!--footer section-->
   <footer class="bg-purple-800 bg-cover mx-auto mt-10">
-    <div class="lg:max-w-screen-xl lg:mx-32">
-      <div class="container flex md:flex-row flex-col lg:max-w-screen-xl lg:mx-32 py-24">
+    <div class="px-4 py-10 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:py-8 lg:px-20">
+      <div class="container flex lg:flex-row flex-col ">
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto">
           <a class="flex font-medium items-center md:justify-start text-gray-900">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -1053,7 +1053,7 @@
             quibusdam.
           </p>
         </div>
-        <div class="flex-grow flex-col md:flex-row flex justify-between md:pl-20 -mb-10 md:mt-0 mt-10 mx-5">
+        <div class="flex-grow flex-col lg:flex-row flex justify-between md:pl-20 -mb-10 md:mt-0 mt-10 mx-5">
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
             <h2 class="font-bold text-white tracking-widest text-sm mb-3 uppercase">
               Programs
