--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
   <!--footer section-->
   <footer class="bg-purple-800 bg-cover mx-auto mt-10">
     <div class="px-4 py-10 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:py-8 lg:px-20">
-      <div class="container flex lg:flex-row flex-col ">
+      <div class="container flex md:flex-row flex-col ">
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto">
           <a class="flex font-medium items-center md:justify-start text-gray-900">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -1053,7 +1053,7 @@
             quibusdam.
           </p>
         </div>
-        <div class="flex-grow flex-col lg:flex-row flex justify-between md:pl-20 -mb-10 md:mt-0 mt-10 mx-5">
+        <div class="flex-grow flex-col md:flex-row flex justify-between md:pl-20 -mb-10 md:mt-0 mt-10 mx-5">
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
             <h2 class="font-bold text-white tracking-widest text-sm mb-3 uppercase">
               Programs
