--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
   </section>
   <!--recent course-->
   <section>
-    <div class="container bg-white bg-cover min-h-screen min-w-ful mx-auto ">
+    <div class="container bg-white bg-cover  min-w-ful mx-auto ">
       <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-10">
         <div class=" flex flex-row space-x-28">
           <div class="mx-5">
