--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
   <!--recent course-->
   <section>
     <div class="container bg-white bg-cover  min-w-ful mx-auto ">
-      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-10">
+      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 ">
         <div class=" flex flex-row space-x-28">
           <div class="mx-5">
             <h3 class="capitalize text-xl lg:text-2xl font-bold">
@@ -484,7 +484,7 @@
           </div>
         </div>
         <!--blog post section-->
-        <div class=" w-full  items-center flex flex-col md:flex-row lg:space-x-5">
+        <div class=" w-full  items-center flex flex-col md:flex-row lg:space-x-10">
           <!--
                    <a href="#">
                     <div class="p-4">
@@ -620,7 +620,7 @@
               </button>
             </div>
 
-            <div class="swiper-container lg:max-w-screen-xl w-full overflow-hidden" x-ref="container">
+            <div class="swiper-container md:max-w-full lg:max-w-screen-xl w-full overflow-hidden" x-ref="container">
               <div class="swiper-wrapper">
                 <!-- Slides start here -->
                 <div class="swiper-slide">
