--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!--how it work section-->
   <section>
     <div class="container bg-white bg-cover min-h-screen min-w-full mx-auto">
-      <div class="mt-8 px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20 ">
+      <div class="mt-8 px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 ">
         <div class="text-center">
           <h2 class="text-2xl lg:text-2xl font-medium lg:tracking-widest font-sans capitalize">
             how it works
@@ -254,7 +254,7 @@
           </div>
         </div>
         <!--====== our work ====-->
-        <div class="mt-5 lg:mt-20">
+        <div class="mt-5 ">
           <div class="flex md:flex-row flex-col items-center justify-between lg:space-x-5">
             <div
               class="max-w-2xl lg:w-1/2 lg:w-[30rem] lg:h-[30rem]  mt-10 inline-flex items-center justify-center skew-y-6 rounded-full bg-slate-50 text-slate-200 shadow-sm mb-5 flex-shrink-0">
