--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <div id="top" class="w-full flex flex-col z-50 fixed sm:relative bg-white">
         <div class="">
           <nav id="site-menu"
-            class="px-5 flex sm:flex-row  md:max-w-full lg:max-w-screen-xl justify-between  mt-4 py-3 bg-white mx-auto shadow sm:shadow-md border-t-4 border-purple-900">
+            class=" flex sm:flex-row  justify-between md:max-w-full lg:max-w-screen-xl py-3 px-4 md:px-8 mx-auto    shadow sm:shadow-md border-t-4 border-purple-900">
+
+            <!--===logo ====-->
             <div
               class="w-full sm:w-auto sm:self-center flex flex-row sm:flex-none flex-no-wrap justify-between items-center">
               <a href="#" class="no-underline py-1">
@@ -47,6 +49,8 @@
                 Login
               </button>
             </div>
+
+
           </nav>
         </div>
       </div>
