--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
             Veiw More
           </button>
         </div>
-        <div class="grid gap-5 mx-auto sm:grid-cols-2 lg:grid-cols-3 lg:-w-screen-lg ">
+        <div class="grid gap-5 mx-auto grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full  ">
           <div class="p-4  max-w-md">
             <div class="bg-gray-100 p-8 rounded">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4"
